edit target and activity
