# app/Http/Controllers/Api/TargetController.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers\Api;
 
+use App\Filters\TargetFilter;
+use App\Hospital;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Api\TargetRequest;
 use App\Http\Resources\TargetResource;
@@ -16,29 +18,40 @@ class TargetController extends Controller
      *
      * @SWG\Get(
      *      tags={"targets"},
-     *      path="/targets",
-     *      summary="get all targets paginated",
+     *      path="/hospitals/{hospital}/targets",
+     *      summary="get hospital targets paginated",
      *      security={
      *          {"jwt": {}}
      *      },@SWG\Parameter(
-     *         name="hospital_id",
+     *         name="hospital",
+     *         in="path",
+     *         required=true,
+     *         type="integer",
+     *      ),@SWG\Parameter(
+     *         name="product",
+     *         in="query",
+     *         type="string",
+     *         format="string",
+     *         description="opsumit, uptravi ,tracleer",
+     *      ),@SWG\Parameter(
+     *         name="year",
+     *         in="query",
+     *         type="integer",
+     *      ),@SWG\Parameter(
+     *         name="month",
      *         in="query",
      *         type="integer",
      *      ),
      *      @SWG\Response(response=200, description="object"),
      * )
-     * @param Request $request
+     * @param Hospital $hospital
+     * @param TargetFilter $filter
      * @return \Illuminate\Http\Resources\Json\AnonymousResourceCollection
      */
-    public function index(Request $request)
+    public function index(Hospital $hospital,TargetFilter $filter)
     {
         $auth_user = auth()->user();
-        $rows =$auth_user->targets()->with('hospital');
-        if ($request->has('hospital_id') and $request->hospital_id)
-        {
-            $rows=$rows->where('hospital_id',$request->hospital_id);
-        }
-        $rows= $rows->paginate($this->api_paginate_num);
+        $rows =$hospital->targets()->where('user_id',$auth_user->id)->filter($filter)->with('hospital')->paginate($this->api_paginate_num);
         return TargetResource::collection($rows);
     }
 
@@ -46,11 +59,23 @@ class TargetController extends Controller
      *
      * @SWG\post(
      *      tags={"targets"},
-     *      path="/targets",
+     *      path="/hospitals/{hospital}/targets",
      *      summary="add add new target",
      *      security={
      *          {"jwt": {}}
      *      },@SWG\Parameter(
+     *         name="hospital",
+     *         in="path",
+     *         required=true,
+     *         type="integer",
+     *      ),@SWG\Parameter(
+     *         name="product",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *         description="opsumit, uptravi ,tracleer",
+     *      ),@SWG\Parameter(
      *         name="number",
      *         in="formData",
      *         required=true,
@@ -65,21 +90,23 @@ class TargetController extends Controller
      *         in="formData",
      *         required=true,
      *         type="integer",
-     *      ),@SWG\Parameter(
-     *         name="hospital_id",
-     *         in="formData",
-     *         required=true,
-     *         type="integer",
      *      ),
      *      @SWG\Response(response=200, description="object"),
      * )
+     * @param Hospital $hospital
      * @param TargetRequest $request
      * @return \Illuminate\Http\JsonResponse
      */
-    public function store(TargetRequest $request)
+    public function store(Hospital $hospital,TargetRequest $request)
     {
         $auth_user = auth()->user();
-        $target = $auth_user->targets()->create($request->all());
+        $inputs = $request->all();
+        $inputs['user_id'] = $auth_user->id;
+        if ($hospital->targets()->where('product',$request->product)->where('year',$request->year)->where('month',$request->month)->first())
+        {
+            return $this->responseJson('Error, You insert Target of this Month Before!',400);
+        }
+        $target = $hospital->targets()->create($inputs);
         if ($target)
         {
             return $this->responseJson('Send Successfully',200);
@@ -91,15 +118,27 @@ class TargetController extends Controller
      *
      * @SWG\Put(
      *      tags={"targets"},
-     *      path="/targets/{target}",
+     *      path="/hospitals/{hospital}/targets/{target}",
      *      summary="update target",
      *      security={
      *          {"jwt": {}}
      *      },@SWG\Parameter(
+     *         name="hospital",
+     *         in="path",
+     *         required=true,
+     *         type="integer",
+     *      ),@SWG\Parameter(
      *         name="target",
      *         in="path",
      *         required=true,
      *         type="integer",
+     *      ),@SWG\Parameter(
+     *         name="product",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *         description="opsumit, uptravi ,tracleer",
      *      ),@SWG\Parameter(
      *         name="number",
      *         in="formData",
@@ -116,11 +155,6 @@ class TargetController extends Controller
      *         required=true,
      *         type="integer",
      *      ),@SWG\Parameter(
-     *         name="hospital_id",
-     *         in="formData",
-     *         required=true,
-     *         type="integer",
-     *      ),@SWG\Parameter(
      *         name="_method:put",
      *         in="formData",
      *         type="string",
@@ -128,11 +162,12 @@ class TargetController extends Controller
      *      ),
      *      @SWG\Response(response=200, description="object"),
      * )
+     * @param Hospital $hospital
      * @param TargetRequest $request
      * @param UserTargets $target
      * @return \Illuminate\Http\JsonResponse
      */
-    public function update(TargetRequest $request, UserTargets $target)
+    public function update(Hospital $hospital,TargetRequest $request, UserTargets $target)
     {
         $target->update($request->all());
         return $this->responseJson('updated Successfully',200);
@@ -142,11 +177,16 @@ class TargetController extends Controller
      *
      * @SWG\Delete(
      *      tags={"targets"},
-     *      path="/targets/{target}",
+     *      path="/hospitals/{hospital}/targets/{target}",
      *      summary="Delete target",
      *      security={
      *          {"jwt": {}}
      *      },@SWG\Parameter(
+     *         name="hospital",
+     *         in="path",
+     *         required=true,
+     *         type="integer",
+     *      ),@SWG\Parameter(
      *         name="target",
      *         in="path",
      *         required=true,
@@ -154,11 +194,12 @@ class TargetController extends Controller
      *      ),
      *      @SWG\Response(response=200, description="object"),
      * )
+     * @param Hospital $hospital
      * @param UserTargets $target
      * @return \Illuminate\Http\JsonResponse
      * @throws \Exception
      */
-    public function destroy(UserTargets $target)
+    public function destroy(Hospital $hospital,UserTargets $target)
     {
         $target->delete();
         return $this->responseJson('Delete Successfully',200);
