# app/Http/Requests/Api/ActivityRequest.php
@@ -28,6 +28,10 @@ class ActivityRequest extends FormRequest
             'subtype'=>'required',
             'date'=>'required',
             'city_id'=>'required|exists:cities,id',
+            'speciality'=>'required|array|min:1',
+            'speciality.*'=>'required',
+            'no_attendees'=>'required|array|min:1',
+            'no_attendees.*'=>'required',
             'speakers'=>'required|array|min:1',
             'speakers.*'=>'array',
             'speakers.*.type'=>'required',
