# app/Http/Resources/ActivityResource.php
@@ -18,7 +18,9 @@ class ActivityResource extends JsonResource
             'id'=>$this->id,
             'type'=>$this->type,
             'subtype'=>$this->subtype,
+            'product'=>$this->product,
             'date'=>$this->date,
+            'speciality'=>$this->speciality,
             'no_attendees'=>$this->no_attendees,
             'created_at'=>$this->created_at->format('d/m/Y h:i A'),
             'city'=>CityResource::make($this->city),
@@ -27,3 +29,4 @@ class ActivityResource extends JsonResource
         ];
     }
 }
+
